# INNERVOICE

./: .gitignore  LICENSE  README.md  eslint.config.js  package.json  tsconfig.base.json  vitest.config.ts
.husky/_/: husky.sh
app/: App.tsx  app.json  package.json  tsconfig.json
app/assets/: README.md
app/hooks/: useOneTapTranscription.ts
app/src/components/: ChatBubble.tsx  HistoryList.tsx  RecordButton.tsx
app/src/navigation/: RootNavigator.tsx
app/src/screens/: DialogScreen.tsx  HistoryScreen.tsx  HomeScreen.tsx
app/src/store/: useSettingsStore.ts
app/src/theme/: ThemeContext.tsx  theme.ts
app/utils/: audio.ts
apps/desktop/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs  whisper.rs
apps/desktop/src/lib/: crypto.ts  database.ts  dialog.ts  entries.ts  migrations.ts  settings.ts  tauri-plugin-sql-api.ts  whisper.ts
apps/desktop/src/pages/: Dialog.tsx  History.tsx  Home.tsx  Settings.tsx
apps/desktop/src/sync/: repository.ts  service.ts
apps/mobile/: App.tsx  app.config.ts  package.json  tsconfig.json
apps/mobile/plugins/: withReleaseSigning.ts
apps/mobile/scripts/: build-android.sh  build-ios.sh  create-export-options.mjs  write-signing-properties.mjs
apps/mobile/src/components/: Badge.tsx  EntryItem.tsx  RecordButton.tsx  SectionHeader.tsx
apps/mobile/src/crypto/: deviceKeys.ts
apps/mobile/src/hooks/: useAudioHints.ts  useConversationFlow.ts  useDatabaseReady.ts  useExportSettings.ts  useOnboardingStatus.ts  useSyncSettings.ts
apps/mobile/src/i18n/: index.tsx  messages.de.ts  messages.en.ts
apps/mobile/src/screens/: Dialog.tsx  History.tsx  Home.tsx  Onboarding.tsx  Settings.tsx
apps/mobile/src/services/: embeddings.ts  exporter.ts  models.ts  recorder.ts  respond.ts  transcription.ts
apps/mobile/src/storage/: database.ts  entries.ts  migrations.ts  settings.ts
apps/mobile/src/storage/__tests__/: migration.spec.ts
apps/mobile/src/sync/: repository.ts  service.ts
apps/mobile/src/types/: react-native-keychain.d.ts  react-native-quick-sqlite.d.ts
apps/mobile/src/utils/: notify.ts
core/embeddings/: model_loader.py  pipeline.py
core/search/: semantic.py
core/storage/: sqlite_vector_store.py
native/: CMakeLists.txt
native/android/: build.gradle.kts
native/android/src/main/: AndroidManifest.xml
native/android/src/main/cpp/: CMakeLists.txt  WhisperBridgeJNI.cpp
native/android/src/main/kotlin/com/innervoice/whisper/: WhisperModule.kt  WhisperPackage.kt
native/ios/: Package.swift
native/ios/Sources/InnerVoiceWhisper/: IVWhisperModule.m  WhisperModule.swift
native/ios/Sources/InnerVoiceWhisper/include/: InnerVoiceWhisper.h  module.modulemap
native/whisper/include/: ModelCache.h  WhisperBridge.h  WhisperBridgeC.h
native/whisper/src/: ModelCache.cpp  WhisperBridge.cpp
persona/: emotional.json  logical.json  mentor.json  shadow.json
public/: app.js  index.html  styles.css
react-native-bridge/src/: index.ts
scripts/smoke/: mobile.ts  search.ts
src/: db.py  persona_loader.py  responder.py  server.py  state_machine.py
templates/: emotional.json  logical.json  mentor.json  shadow.json
