[package]
name = "innervoice_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["dialog", "clipboard"] }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
lazy_static = "1"
whisper-rs = "0.9"
hound = "3"
num_cpus = "1"

[build-dependencies]
tauri-build = { version = "1" }
